# FrEase

./: .gitignore  README.md  pyproject.toml  setup.py  test.ipynb
checkpoints/: checkpoint_0.pt  checkpoint_1.pt  checkpoint_2.pt  checkpoint_3.pt  checkpoint_4.pt  checkpoint_5.pt  checkpoint_6.pt  checkpoint_7.pt  checkpoint_8.pt  checkpoint_9.pt  recipe.pkl
frEase/: freezer.py  grouped_iterator.py  icecube.py  recipes.py  thermal_camera.py  trainer.py  utils.py
frease.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: display_res.py  rich.test.py  test_frease.py  test_recipes.py
tests/tiny_stories/: preprocessing.py  test_tiny_stories.py  tiny_stories_dataset.py
tests/transformer/: attention.py  transformer.py
