[project]
name = "frease"
version = "0.1.0"
authors = [
    {name = "Clustery", email = "bigarnaque@gmail.com"}
]

description = """A frenchy package, that starts with a shallow PyTorch model and progressively adds layers 
while freezing previous ones, similar to boosting by minimizing residuals at each step. 
This method, also inspired by simulated annealing, 
enables independent retraining of each section for improved model performance."""

readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.2.0",
    "matplotlib>=3.10.0",
    "rich>=13.9.4",
    "ruff>=0.9.9",
    "setuptools>=75.8.0",
    "torch>=2.6.0",
]

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]
